--- a/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
+++ b/packages/docs/services/inversify-site/docs/fundamentals/binding.mdx
@@ -25,7 +25,7 @@ The scope determines the caching strategy used to decide whether the service sho
 
 #### Request
 
-When the service is resolved within the same container.get request, the same resolved value will be used.
+When the service is resolved within the same `container.get` request, the same resolved value will be used.
 
 <CodeBlock language="ts">{bindingScopeRequestSource}</CodeBlock>
 
