--- a/packages/docs/services/inversify-site/docs/api/container.mdx
+++ b/packages/docs/services/inversify-site/docs/api/container.mdx
@@ -32,17 +32,17 @@ import CodeBlock from '@theme/CodeBlock';
 
 # Container
 
-The InversifyJS container is where dependencies are first configured through bind and, possibly later, reconfigured and removed. The container can be worked on directly in this regard or container modules can be utilized.
-You can query the configuration and resolve configured dependencies with resolved and the 'get' methods.
+The InversifyJS container is where dependencies are first configured through binding and, possibly later, reconfigured and removed. The container can be worked on directly in this regard or container modules can be utilized.
+You can query the configuration and resolve configured dependencies with the `get` methods.
 You can react to resolutions with container activation handlers and unbinding with container deactivation handlers.
 You can create container hierarchies where container ascendants can supply the dependencies for descendants.
 For testing, state can be saved as a snapshot on a stack and later restored.
-For advanced control you can apply middleware to intercept the resolution request and the resolved dependency.
+For advanced control, you can apply middleware to intercept the resolution request and the resolved dependency.
 You can even provide your own annotation solution.
 
-
 ## Container Options
-Container options can be passed to the Container constructor and defaults will be provided if you do not or if you do but omit an option.
+
+Container options can be passed to the Container constructor, and defaults will be provided if you do not or if you do but omit an option.
 Options can be changed after construction and will be shared by child containers created from the Container if you do not provide options for them.
 
 ### defaultScope
@@ -50,7 +50,7 @@ Options can be changed after construction and will be shared by child containers
 The default scope is `transient` when binding to/toSelf/toDynamicValue/toService.
 Other bindings can only be bound in `singleton` scope.
 
-You can use container options to change the default scope for the bindings that default to `transient` at application level:
+You can use container options to change the default scope for the bindings that default to `transient` at the application level:
 
 <CodeBlock language="ts">{containerApiOptionsDefaultScopeSource}</CodeBlock>
 
@@ -67,9 +67,7 @@ Manually defined bindings will take precedence:
 
 ### skipBaseClassChecks
 
-You can use this to skip checking base classes for the @injectable property, which is
-especially useful if any of your @injectable classes extend classes that you don't control
-(third party classes). By default, this value is `false`.
+You can use this to skip checking base classes for the `@injectable` property, which is especially useful if any of your `@injectable` classes extend classes that you don't control (third-party classes). By default, this value is `false`.
 
 ```ts
 const container = new Container({ skipBaseClassChecks: true });
@@ -259,7 +257,7 @@ You can use the `isBound` method to check if there are registered bindings for a
 ## isCurrentBound
 
 ```ts
-isCurrentBound(serviceIdentifier: interfaces.ServiceIdentifier\<unknown>): boolean
+isCurrentBound(serviceIdentifier: interfaces.ServiceIdentifier<unknown>): boolean;
 ```
 
 You can use the `isCurrentBound` method to check if there are registered bindings for a given service identifier only in the current container.
