--- a/packages/docs/services/inversify-site/docs/introduction/dependency-inversion.mdx
+++ b/packages/docs/services/inversify-site/docs/introduction/dependency-inversion.mdx
@@ -7,14 +7,14 @@ import dependencyInversionSource from '@inversifyjs/code-examples/generated/exam
 
 # Dependency inversion
 
-In order to apply the dependency inversion principle, we can rely on injection symbols:
+To apply the dependency inversion principle, you can use injection symbols:
 
 <CodeBlock language="ts">{dependencyInversionSource}</CodeBlock>
 
-By using symbols this way we can provide interface implementations in a way the dependent class is not aware of the dependency implementation details.
+By using symbols, you can provide interface implementations in a way that the dependent class is not aware of the dependency implementation details.
 
 :::note
 
-Even if symbols are suggested for this purpose, InversifyJS supports the usage of Classes and string literals as service identifiers as well.
+Although symbols are recommended for this purpose, InversifyJS also supports using Classes and string literals as service identifiers.
 
 :::
